--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>Be my 💞 Valentine :)</title>
     <link
       rel="stylesheet"
     />
@@ -19,7 +19,7 @@
           Hey
           <span id="name">xyz</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
+        <p class="two" id="greetingText">I really like your name  😊 btw!</p>
       </div>
       <div class="three">
         <p>It's Valentine!!! :D</p>
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Okay, now come back and tell me if you liked 💗 it.</p>
+        <p id="replay">Refresh, if you want to watch it again.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
