--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <p class="two" id="greetingText">I really like your name  😊 btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>your my 💖 Valentine...😘!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Valentine's Day 💌 love!! Yeee! Love and blah blah...😘 muah muah... I love u unconditionally
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy Valentine's Day 💌 thango</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
