--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">xyz</span>
+          <span id="name">unatha...🫶</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name  😊 btw!</p>
+        <p class="two" id="greetingText">I really like you and your name  😊 btw!</p>
       </div>
       <div class="three">
-        <p>your my 💖 Valentine...😘!!! :D</p>
+        <p>your my 💖 Valentine...!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
@@ -51,8 +51,8 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day 💌 thango</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h3 class="wish-hbd">Happy Valentine's Day ♡ thango</h3>
+          <h5 id="wishText">Love has nothing to do with what you are expecting to get - only with what you are expecting to give - which is everything.jabeee love's ❤️ yoy</h5>
         </div>
       </div>
       <div class="seven">
