--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day 💌 love!! Yeee! Love and blah blah...😘 muah muah... I love u unconditionally
+            Happy Valentine's Day 💌 dear! I love you♥️ unconditionally and blah blah...😘 muah muah... 
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -52,7 +52,7 @@
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day ♡ thango</h3>
-          <h5 id="wishText">Love has nothing to do with what you are expecting to get - only with what you are expecting to give - which is everything.jabeee love's ❤️ yoy</h5>
+          <h5 id="wishText">Love has nothing to do with what you are expecting to get - only with what you are expecting to give - which is everything.jabeee love's ❤️ you</h5>
         </div>
       </div>
       <div class="seven">
