--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           Hey
           <span id="name">unatha...🫶</span>
         </h1>
-        <p class="two" id="greetingText">I really like you and your name  😊 btw!</p>
+        <p class="two" id="greetingText">I really like you(⁠｡⁠♡⁠‿⁠♡⁠｡⁠) and your name 😊 btw!</p>
       </div>
       <div class="three">
         <p>your my 💖 Valentine...!!! :D</p>
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day 💌 dear! I love you♥️ unconditionally and blah blah...😘 muah muah... 
+            Happy Valentine's Day 💌 dear! I love you♥️ unconditionally 😘 muah muah...and blah blah
           </p>
           <p class="fake-btn">Send</p>
         </div>
