--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <p>Okay, now come back and tell me if you liked 💗 it.</p>
         <p id="replay">Refresh, if you want to watch it again.</p>
         <p class="last-smile">:)</p>
+<p>made with love from jabeee😉 ♥️.</p>
       </div>
     </div>
   </body>
