--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked 💗 it.</p>
+        <p>Okay, now come back and tell me if you liked 💗 it. (⁠✷⁠‿⁠✷⁠)Made with love from jabeee😉 ♥️.</p>
         <p id="replay">Refresh, if you want to watch it again.</p>
         <p class="last-smile">:)</p>
-<p>made with love from jabeee😉 ♥️.</p>
       </div>
     </div>
   </body>
