--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Be my 💞 Valentine :)</title>
+    <title>happy 💞 birthday :)</title>
     <link
       rel="stylesheet"
     />
@@ -22,12 +22,12 @@
         <p class="two" id="greetingText">I really like you(⁠｡⁠♡⁠‿⁠♡⁠｡⁠) and your name 😊 btw!</p>
       </div>
       <div class="three">
-        <p>your my 💖 Valentine...!!! :D</p>
+        <p>happy 💖 birthday...!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day 💌 dear! I love you♥️ unconditionally 😘 muah muah...and blah blah
+            Happy birthdayDay 💌 dear! I love you♥️ unconditionally 😘 muah muah...and blah blah
           </p>
           <p class="fake-btn">Send</p>
         </div>
