--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="two" id="greetingText">I really like you(⁠｡⁠♡⁠‿⁠♡⁠｡⁠) and your name 😊 btw!</p>
       </div>
       <div class="three">
-        <p>happy 💖 birthday...!!! :D</p>
+        <p>happy 💖 birthday to you...!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
