--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day ♡ thango</h3>
+          <h3 class="wish-hbd">Happy Birthday ♡ thango</h3>
           <h5 id="wishText">Love has nothing to do with what you are expecting to get - only with what you are expecting to give - which is everything.jabeee love's ❤️ you</h5>
         </div>
       </div>
